--- a/css/recipe.css
+++ b/css/recipe.css
@@ -57,7 +57,7 @@
 
 /* Recipe description text styling */
 .recipe-description__text {
-  text-align: justify;
+  /* text-align: justify; */
   font-size: 1.15em;
   line-height: 1.7;
   color: var(--color-grey-dark);
